<resources>
    <string name="app_name">Shelter</string>
    <string name="search">Buscar un animal</string>
    <string name="empty_shelter_title">Aún no hay ningún animal. Añade uno tocando el botón de la esquina inferior derecha.</string>
    <string name="save">Guardar</string>
    <string name="gender_male">Macho</string>
    <string name="gender_female">Hembra</string>
    <string name="gender_unknown">Desconocido</string>
    <string name="weight">Peso</string>
    <string name="breed">Raza</string>
    <string name="name">Nombre del animal</string>
    <string name="update_pet">Actualizar</string>
    <string name="category_info">Información</string>
    <string name="hint_pet_name">Nombre</string>
    <string name="hint_pet_breed">Raza</string>
    <string name="category_gender">Género</string>
    <string name="category_measurement">Peso</string>
    <string name="hint_pet_weight">Peso</string>
    <string name="unit_pet_weight">kg</string>
    <string name="pick_image">Elegir una imagen</string>
    <string name="editor_activity_title_new_pet">Añadir un animal</string>
    <string name="category_date">Fecha</string>
    <string name="hint_pet_birthdate">Fecha de nacimiento</string>
    <string name="category_details">Detalles</string>
    <string name="hint_pet_details">Otros detalles...</string>
    <string name="category_data">Otros datos</string>
    <string name="ster_category">¿Esterilizado?</string>
    <string name="vacc_category">¿Vacunado?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="dialog_delete_pet">Vas a borrar este animal. Sus datos se eliminarán de la base de datos. (Esta opción no se puede deshacer)</string>
    <string name="dialog_delete_pet_title">"¿Estás segur@? "</string>
    <string name="category_adopted">¿Adoptado?</string>
    <string name="hint_date">Fecha</string>
    <string name="hint_adopted_date">Fecha de la adopción.</string>
    <string name="not_saved">No se ha guardado. Asegúrate de que los campos "Nombre", "Raza" y "Peso" no están vacíos.</string>
    <string name="age">Edad</string>
    <string name="hint_pet_name_title">Introduce los datos del animal</string>
    <string name="zero">0</string>
    <string name="default_date">01/01/2010</string>
    <string name="zeroDecimal">0.0</string>
</resources>