<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.EditorActivity"
    android:fillViewport="true"
    android:theme="@style/Theme.Shelter"
    >


    <RelativeLayout
        android:id="@+id/mRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:clipToPadding="false"
        >

        <LinearLayout
            android:id="@+id/mLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_margin="4dp"
            android:animateLayoutChanges="true"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pet_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:onClick="onClickPickImage"
                    android:src="@drawable/img_dog"
                    app:civ_border_color="@color/primary_color"
                    app:civ_border_width="2dp" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignBottom="@+id/pet_image"
                    android:layout_alignEnd="@+id/pet_image"
                    android:src="@drawable/ic_tooltip_photo"
                    android:onClick="onClickPickImage"
                    android:contentDescription="Imagen de la mascota"
                    />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/category_info"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:inputType="textCapWords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pet_name"
                        app:boxStrokeColor="@color/primary_color"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                             />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:inputType="textCapWords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pet_breed"
                        app:boxStrokeColor="@color/primary_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_breed"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/category_gender"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner_gender"
                        android:layout_height="48dp"
                        android:layout_width="wrap_content"
                        android:paddingEnd="16dp"
                        android:paddingStart="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/category_data"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pet_birthdate"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pet_birthdate"
                        app:boxStrokeColor="@color/primary_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_birthdate"
                            android:focusableInTouchMode="false"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        app:suffixText="kg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pet_weight"
                        app:boxStrokeColor="@color/primary_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_weight"
                            android:inputType="number|textNoSuggestions"
                            android:digits="0123456789"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="0"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:text="@string/ster_category"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group_ster"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="4dp"
                        >
                        <RadioButton
                            android:id="@+id/radio_ster_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:onClick="onRadioButtonClicked"
                            />

                        <RadioButton
                            android:id="@+id/radio_ster_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/no"
                            android:onClick="onRadioButtonClicked"
                            />

                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:text="@string/vacc_category"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:orientation="horizontal">

                    <RadioGroup
                        android:id="@+id/radio_group_vacc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/radio_vacc_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:onClick="onRadioButtonClicked"
                            />

                        <RadioButton
                            android:id="@+id/radio_vacc_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/no"
                            android:onClick="onRadioButtonClicked"

                            />
                    </RadioGroup>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:hint="@string/hint_pet_details"
                        android:scrollbars="vertical"
                        app:boxStrokeColor="@color/primary_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_details"
                            android:inputType="textMultiLine"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>



            </LinearLayout>

            <LinearLayout
                android:id="@+id/container_adopted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/category_adopted"
                    style="@style/CategoryStyle"
                    />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radio_group_adopted"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <RadioButton
                            android:id="@+id/radio_adopt_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:onClick="onRadioButtonClicked"
                            />

                        <RadioButton
                            android:id="@+id/radio_adopt_no"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/no"
                            android:onClick="onRadioButtonClicked"

                            />
                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/pet_adopted_date"
                        android:inputType="date"
                        android:layout_width="match_parent"
                        android:clickable="true"
                        android:visibility="gone"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_adopted_date"
                        app:boxStrokeColor="@color/primary_color"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_pet_adopted_date"
                            android:focusableInTouchMode="false"
                            android:text="01/01/2000"
                            android:visibility="gone"
                            android:clickable="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>